--- a/index.html
+++ b/index.html
@@ -4,30 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Unboxing Korea</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
     <header>
-        <form action="/buscar" class="formBuscar">
+<!--         <form action="/buscar" class="formBuscar">
             <label for="buscaTexto">Buscar</label>
             <input id="buscaTexto" type="search" placeholder="Ingrese texto" />
             <button type="submit">Buscar</button>
-        </form>
+        </form> -->
+        <nav class="navbar bg-transparent">
+            <div class="container-fluid justify-content-end">
+                <form class="d-flex" role="search">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
+                <button class="btn btn-primary" type="submit">Search</button>
+                </form>
+            </div>
+        </nav>
         <div class="boxH1">
             <h1>Unboxing Korea</h1>
         </div>
-
-        <div class="barraNav">
-            <nav>
-                <ul>
-                    <li><a href="#">Inicio</a></li>
-                    <li><a href="./pages/destinos.html">Destinos</a></li>
-                    <li><a href="./pages/que-comer.html">Qué comer</a></li>
-                    <li><a href="./pages/consejos.html">Consejos</a></li>
-                    <li><a href="./pages/sobre-mi.html">Sobre mi</a> </li>
-                </ul>
-            </nav>
-        </div>
+        <nav class="navbar navbar-expand-lg bg-transparent">
+            <ul class="navbar-nav d-flex justify-content-around w-100">
+                <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="./pages/destinos.html">Destinos</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="./pages/que-comer.html">Qué comer</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="./pages/consejos.html">Consejos</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="./pages/sobre-mi.html">Sobre mi</a>
+                </li>
+            </ul>
+        </nav>
     </header>
     <main>
         <div>
@@ -64,27 +80,47 @@
         </section>
         <section>
             <h3 class="h3Index">Qué Comer</h3>
-            <div class="gridComidas">
-                <article>
-                    <img src="./assets/Spicy-Korean-Pork-Stir-Fry.jpg" alt="Plato de Jeyuk Bokkeum">
-                    <h4>Jeyuk Bokkeum</h4>
-                    <button><a href="./pages/que-comer.html">Mas info</a></button>
-                </article>
-                <article>
-                    <img src="./assets/kimchi.jpeg" alt="Plato con Kimchi">
-                    <h4>Kimchi</h4>
-                    <button><a href="./pages/que-comer.html">Mas info</a></button>
-                </article>
-                <article>
-                    <img src="./assets/bibimbap-3WIPGELALFASPN3S3TCESOA6GE.avif" alt="Plato de Bibimbap">
-                    <h4>Bibimbap</h4>
-                    <button><a href="./pages/que-comer.html">Mas info</a></button>
-                </article>
-                <article>
-                    <img src="./assets/japchae.jpg" alt="Plato de japchae">
-                    <h4>Japchae</h4>
-                    <button><a href="./pages/que-comer.html">Mas info</a></button>
-                </article>
+            <div class="row row-cols-1 row-cols-lg-4 row-cols-md-2 row-cols-sm-1">
+                <div class="col">
+                    <div class="card h-100">
+                    <img src="./assets/Spicy-Korean-Pork-Stir-Fry.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h4 class="card-title">Jeyuk Bokkeum</h4>
+                        <p class="card-text">El Jeyuk Bokkeum es un salteado coreano de cerdo marinado con gochujang, ajo y jengibre, mezclado con vegetales y cocinado a fuego vivo para lograr un sabor bien picante dulce y aromático.</p>
+                        <a href="./pages/que-comer.html" class="btn btn-primary">Mas info</a>
+                    </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                    <img src="./assets/kimchi.jpeg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h4 class="card-title">Kimchi</h4>
+                        <p class="card-text">El Kimchi es un plato tradicional coreano hecho de vegetales fermentados, principalmente col china y rábanos, sazonados con una mezcla de chile en polvo, ajo, jengibre y otros condimentos.</p>
+                        <a href="./pages/que-comer.html" class="btn btn-primary">Mas info</a>
+                    </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                    <img src="./assets/bibimbap-3WIPGELALFASPN3S3TCESOA6GE.avif" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h4 class="card-title">Bibimbap</h4>
+                        <p class="card-text">El Bibimbap es un plato coreano servido en un bol con arroz, vegetales variados, carne o tofu y un huevo, mezclado con gochujang para lograr un sabor equilibrado, colorido y delicioso.</p>
+                        <a href="./pages/que-comer.html" class="btn btn-primary">Mas info</a>
+                    </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                    <img src="./assets/japchae.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h4 class="card-title">Japchae</h4>
+                        <p class="card-text">El Japchae es un plato coreano hecho con fideos de batata salteados con vegetales, carne y salsa de soja y sésamo, logrando una textura suave y un sabor dulce, armonioso y muy fragante.</p>
+                        <a href="./pages/que-comer.html" class="btn btn-primary">Mas info</a>
+                    </div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
@@ -97,13 +133,25 @@
             <li><a href="./pages/consejos.html">Consejos</a></li>
             <li><a href="./pages/sobre-mi.html">Sobre mi</a> </li>
         </ul>
-        <div>
+<!--         <div>
             <form action="/suscribirse">
                 <label for="emailSuscripcion">Suscribite al Newsletter para recibir mas novedades</label>
                 <input id="emailSuscripcion" type="email" placeholder="Ingrese su email" />
                 <button type="submit">Suscribirse</button>
             </form>
-        </div>
+        </div> -->
+        <form class="row g-3 d-flex justify-content-center">
+            <div class="col-auto">
+                <label for="staticEmail2">Suscribite al Newsletter para recibir mas novedades</label>
+            </div>
+            <div class="col-auto">
+                <label for="inputPassword2" class="visually-hidden">Password</label>
+                <input type="password" class="form-control" id="inputPassword2" placeholder="Ingrese su email">
+            </div>
+            <div class="col-auto">
+                <button type="submit" class="btn btn-primary mb-3">Suscribirse</button>
+            </div>
+        </form>
     </footer>    
     
 </body>
