--- a/pages/destinos.html
+++ b/pages/destinos.html
@@ -4,29 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Unboxing Korea</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/styles.css">
 </head>
 <body>
     <header>
-        <form action="/buscar" class="formBuscar">
-            <label for="buscaTexto">Buscar</label>
-            <input id="buscaTexto" type="search" placeholder="Ingrese texto" />
-            <button type="submit">Buscar</button>
-        </form>
+        <nav class="navbar bg-transparent">
+            <div class="container-fluid justify-content-end">
+                <form class="d-flex" role="search">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
+                <button class="btn btn-primary" type="submit">Search</button>
+                </form>
+            </div>
+        </nav>
         <div class="boxH1">
             <h1>Unboxing Korea</h1>
         </div>
-        <div class="barraNav">
-            <nav>
-                <ul>
-                    <li><a href="../index.html">Inicio</a></li>
-                    <li><a href="./destinos.html">Destinos</a></li>
-                    <li><a href="./que-comer.html">Qué comer</a></li>
-                    <li><a href="./consejos.html">Consejos</a></li>
-                    <li><a href="./sobre-mi.html">Sobre mi</a> </li>
-                </ul>
-            </nav>
-        </div>
+        <nav class="navbar navbar-expand-lg bg-transparent">
+            <ul class="navbar-nav d-flex justify-content-around w-100">
+                <li class="nav-item">
+                <a class="nav-link" href="../index.html">Inicio</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="./destinos.html">Destinos</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="./que-comer.html">Qué comer</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="./consejos.html">Consejos</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="./sobre-mi.html">Sobre mi</a>
+                </li>
+            </ul>
+        </nav>
     </header>
      <main>
         <h2>Destinos</h2>
