Tercera subida hamburguesa expandible

--- a/pages/destinos.html
+++ b/pages/destinos.html
@@ -44,7 +44,7 @@
         <h2>Destinos</h2>
         <article>
             <h3>Seoul: tradición y modernidad en armonía</h3>
-            <img src="../assets/Viaje_a_Corea_del_Sur_Seul_Busan_y_Gyeongju_en_9_dias_1_7_VoP0DOc-thumbnail_webp-1920x960.webp" alt="Foto panoramica de Seoul con vista a la torre Namsan" class="imgDestinos">
+            <img  class="imgDestinos" src="../assets/Viaje_a_Corea_del_Sur_Seul_Busan_y_Gyeongju_en_9_dias_1_7_VoP0DOc-thumbnail_webp-1920x960.webp" alt="Foto panoramica de Seoul con vista a la torre Namsan">
             <p>La vibrante capital de Corea del Sur y una de las ciudades más dinámicas del mundo. Reconocida por combinar tecnología avanzada con profundas raíces culturales, la ciudad ofrece un contraste fascinante entre rascacielos futuristas, palacios reales, barrios tradicionales y naturaleza urbana. Cada rincón de Seoul revela una faceta distinta de su historia milenaria y su espíritu innovador.es una metrópoli que combina lo antiguo y lo moderno. Desde el Palacio Gyeongbokgung hasta el bullicioso mercado de Myeongdong, hay algo para todos.</p>
             <ul class="itemsDestinos">
                 <li><img src="../assets/pin.png" alt="" width="20"> Gyeongbokgung Palace</li>
@@ -54,11 +54,11 @@
                 <li><img src="../assets/pin.png" alt="" width="20"> Hongdae District</li>
                 <li><img src="../assets/pin.png" alt="" width="20"> Cheonggyecheon Stream</li>
             </ul>
-            <img src="../assets/Seoul.png" alt="collage de imagenes de Seoul">
+            <img class="imgDestinos" src="../assets/Seoul.png" alt="collage de imagenes de Seoul">
         </article>
         <article>
             <h3>Busan: mar, montañas y tradición costera</h3>
-            <img src="../assets/skycapsule.png" alt="Foto panoramica de Buscan con vista al mar desde Blue Line Park" class="imgDestinos">
+            <img  class="imgDestinos" src="../assets/skycapsule.png" alt="Foto panoramica de Buscan con vista al mar desde Blue Line Park" class="imgDestinos">
             <p>Es la segunda ciudad más grande de Corea del Sur y un destino que combina playas amplias, templos históricos y montañas que abrazan el mar. Con un ambiente más relajado que Seoul, esta ciudad portuaria se destaca por su espíritu costero, su gastronomía —especialmente los platos con mariscos frescos— y su encanto natural. Busan es el lugar ideal para disfrutar de la tranquilidad del océano sin dejar de vivir la cultura coreana en su máxima expresión.</p>
             <ul class="itemsDestinos">
 			    <li><img src="../assets/pin.png" alt="" width="24">Gamcheon Culture Village</li>
@@ -68,11 +68,11 @@
                 <li><img src="../assets/pin.png" alt="" width="24">Songdo Skywalk</li>
                 <li><img src="../assets/pin.png" alt="" width="24">Hwangyeongsan Observatory</li>
             </ul>
-            <img src="../assets/Busan.png" alt="collage de imagenes de Busan">
+            <img  class="imgDestinos" src="../assets/Busan.png" alt="collage de imagenes de Busan">
         </article>
         <article>
             <h3>Jeju: naturaleza volcánica y calma isleña</h3>
-            <img src="../assets/jejuisland.png" alt="Foto del mar de jeju y estatua de piedra volcanica" class="imgDestinos">
+            <img class="imgDestinos" src="../assets/jejuisland.png" alt="Foto del mar de jeju y estatua de piedra volcanica" class="imgDestinos">
             <p>una isla paradisíaca al sur de Corea del Sur, conocida por sus paisajes volcánicos, playas de aguas cristalinas y un ambiente tranquilo ideal para desconectar. Declarada Patrimonio Natural de la Humanidad, combina cráteres, cuevas de lava, cascadas y laderas verdes que caen al mar. Es un destino perfecto para disfrutar de la naturaleza, hacer trekking y descubrir la cultura isleña, marcada por tradiciones únicas como las haenyeo, las famosas buceadoras que pescan a pulmón.</p>
             <ul class="itemsDestinos">
                 <li><img src="../assets/pin.png" alt="" width="24">Seongsan Ilchulbong (Sunrise Peak)</li>
@@ -82,11 +82,11 @@
                 <li><img src="../assets/pin.png" alt="" width="24">Jusangjeolli Cliffs</li>
                 <li><img src="../assets/pin.png" alt="" width="24">Cheonjiyeon Waterfall</li>
             </ul>
-            <img src="../assets/jejucollage.png" alt="Collage de imagenes de Jeju">
+            <img  class="imgDestinos" src="../assets/jejucollage.png" alt="Collage de imagenes de Jeju">
         </article>
         <article>
             <h3>Gyeongju: la capital histórica de Corea</h3>
-            <img src="../assets/Gyeongju.png" alt="Foto del palacio Donggung en Gyeongju de noche" class="imgDestinos">
+            <img class="imgDestinos" src="../assets/Gyeongju.png" alt="Foto del palacio Donggung en Gyeongju de noche" class="imgDestinos">
             <p>Conocida como "el museo sin paredes", Gyeongju fue la capital del antiguo Reino de Silla y alberga una impresionante cantidad de sitios históricos y culturales. La ciudad está salpicada de tumbas reales, templos budistas, palacios y artefactos que narran la rica historia de Corea. Pasear por Gyeongju es como viajar en el tiempo, ofreciendo una experiencia única para los amantes de la historia y la cultura que desean explorar el legado de una de las civilizaciones más antiguas de Asia.</p>
             <ul class="itemsDestinos">
                 <li><img src="../assets/pin.png" alt="" width="24">Parque de Tumuli de Daereungwon</li>
@@ -96,7 +96,7 @@
                 <li><img src="../assets/pin.png" alt="" width="24">Hwangnidangil Street</li>
                 <li><img src="../assets/pin.png" alt="" width="24">Gruta Seokguram</li>
             </ul>
-            <img src="../assets/gyeongjucollage.png" alt="Collage de imagenes de Gyeongju">
+            <img class="imgDestinos" src="../assets/gyeongjucollage.png" alt="Collage de imagenes de Gyeongju">
         </article>
     </main>
         <footer>
