--- a/index.html
+++ b/index.html
@@ -25,24 +25,31 @@
         <div class="boxH1">
             <h1>Unboxing Korea</h1>
         </div>
-        <nav class="navbar navbar-expand-lg bg-transparent">
-            <ul class="navbar-nav d-flex justify-content-around w-100">
-                <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="./pages/destinos.html">Destinos</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="./pages/que-comer.html">Qué comer</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="./pages/consejos.html">Consejos</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="./pages/sobre-mi.html">Sobre mi</a>
-                </li>
-            </ul>
+        <nav class="navbar navbar-expand-md bg-transparent">
+            <div class="container-fluid">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav d-flex justify-content-around w-100">
+                        <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                        <a class="nav-link" href="./pages/destinos.html">Destinos</a>
+                        </li>
+                        <li class="nav-item">
+                        <a class="nav-link" href="./pages/que-comer.html">Qué comer</a>
+                        </li>
+                        <li class="nav-item">
+                        <a class="nav-link" href="./pages/consejos.html">Consejos</a>
+                        </li>
+                        <li class="nav-item">
+                        <a class="nav-link" href="./pages/sobre-mi.html">Sobre mi</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
     </header>
     <main>
@@ -153,6 +160,6 @@
             </div>
         </form>
     </footer>    
-    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
 </html>
