--- a/pages/que-comer.html
+++ b/pages/que-comer.html
@@ -21,23 +21,30 @@
             <h1>Unboxing Korea</h1>
         </div>
         <nav class="navbar navbar-expand-lg bg-transparent">
-            <ul class="navbar-nav d-flex justify-content-around w-100">
-                <li class="nav-item">
-                <a class="nav-link" href="../index.html">Inicio</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="./destinos.html">Destinos</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./que-comer.html">Qué comer</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="./consejos.html">Consejos</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="./sobre-mi.html">Sobre mi</a>
-                </li>
-            </ul>
+            <div class="container-fluid">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav d-flex justify-content-around w-100">
+                        <li class="nav-item">
+                        <a class="nav-link" href="../index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                        <a class="nav-link" href="./destinos.html">Destinos</a>
+                        </li>
+                        <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="./que-comer.html">Qué comer</a>
+                        </li>
+                        <li class="nav-item">
+                        <a class="nav-link" href="./consejos.html">Consejos</a>
+                        </li>
+                        <li class="nav-item">
+                        <a class="nav-link" href="./sobre-mi.html">Sobre mi</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
     </header>
     <main>
