correcciones en todas las paginas y responsive

--- a/pages/que-comer.html
+++ b/pages/que-comer.html
@@ -50,30 +50,38 @@
     <main>
         <h2>Qué Comer</h2>
         <article class="comidaIzq">
-            <h3>Jejuk Bokkeum</h3>
             <div class="descripcionComida">
                 <img src="../assets/Spicy-Korean-Pork-Stir-Fry.jpg" alt="Plato de Jeyuk Bokkeum" width="480">
-                <p>El Jeyuk Bokkeum es un salteado picante de cerdo marinado en gochujang, ajo, jengibre y salsa de soja. Es un plato lleno de sabor, ligeramente dulce y especiado, que suele servirse con arroz y hojas de lechuga para envolver. Es muy popular en los hogares coreanos y en los restaurantes tradicionales.</p>
+                <div class="descrComida">
+                    <h3>Jejuk Bokkeum</h3>
+                    <p>El Jeyuk Bokkeum es un salteado picante de cerdo marinado en gochujang, ajo, jengibre y salsa de soja. Es un plato lleno de sabor, ligeramente dulce y especiado, que suele servirse con arroz y hojas de lechuga para envolver. Es muy popular en los hogares coreanos y en los restaurantes tradicionales.</p>
+                </div>
             </div>
         </article>
         <article Class="comidaDer">
-            <h3>Kimchi</h3>
             <div class="descripcionComida">
-                <p>El Kimchi es un plato tradicional coreano hecho de vegetales fermentados, principalmente col china y rábanos, sazonados con una mezcla de chile en polvo, ajo, jengibre y otros condimentos. Es conocido por su sabor picante y ácido, y es un acompañamiento esencial en casi todas las comidas coreanas. Además de su delicioso sabor, el kimchi es valorado por sus beneficios para la salud debido a su contenido probiótico.</p>
+                <div class="descrComida">
+                    <h3>Kimchi</h3>
+                    <p>El Kimchi es un plato tradicional coreano hecho de vegetales fermentados, principalmente col china y rábanos, sazonados con una mezcla de chile en polvo, ajo, jengibre y otros condimentos. Es conocido por su sabor picante y ácido, y es un acompañamiento esencial en casi todas las comidas coreanas. Además de su delicioso sabor, el kimchi es valorado por sus beneficios para la salud debido a su contenido probiótico.</p>
+                </div>
                 <img src="../assets/kimchi.jpeg" alt="Plato con Kimchi" width="480">
             </div>
         </article>
         <article Class="comidaIzq">
-            <h3>Bibimbap</h3>
             <div class="descripcionComida">
                 <img src="../assets/bibimbap-3WIPGELALFASPN3S3TCESOA6GE.avif" alt="Plato de Bibimbap" width="480">
-                <p>El Bibimbap es un plato coreano que consiste en arroz blanco cubierto con una variedad de vegetales salteados, carne (generalmente de res), un huevo frito y pasta de chile gochujang. Los ingredientes se mezclan antes de comer, creando una combinación deliciosa y colorida de sabores y texturas. Es un plato muy popular tanto en Corea como internacionalmente.</p>
+                <div>
+                    <h3>Bibimbap</h3>
+                    <p>El Bibimbap es un plato coreano que consiste en arroz blanco cubierto con una variedad de vegetales salteados, carne (generalmente de res), un huevo frito y pasta de chile gochujang. Los ingredientes se mezclan antes de comer, creando una combinación deliciosa y colorida de sabores y texturas. Es un plato muy popular tanto en Corea como internacionalmente.</p>
+                </div>
             </div>
         </article>
         <article Class="comidaDer">
-            <h3>Japchae</h3>
             <div class="descripcionComida">
-                <p>El Japchae es un plato coreano hecho de fideos de batata salteados con una mezcla de verduras, carne (a menudo de res) y sazonado con salsa de soja y aceite de sésamo. Es conocido por su textura ligeramente masticable y su sabor dulce y salado. El Japchae se sirve comúnmente en celebraciones y ocasiones especiales en Corea.</p>
+                <div>
+                    <h3>Japchae</h3>
+                    <p>El Japchae es un plato coreano hecho de fideos de batata salteados con una mezcla de verduras, carne (a menudo de res) y sazonado con salsa de soja y aceite de sésamo. Es conocido por su textura ligeramente masticable y su sabor dulce y salado. El Japchae se sirve comúnmente en celebraciones y ocasiones especiales en Corea.</p>
+                </div>
                 <img src="../assets/japchae.jpg" alt="Plato de Japchae" width="480">
             </div>
         </article>
