--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="boxH1">
             <h1>Unboxing Korea</h1>
         </div>
-        <nav class="navbar navbar-expand-md bg-transparent">
+        <nav class="navbar navbar-expand-lg bg-transparent">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
