cambio de imagen collage busan

--- a/pages/destinos.html
+++ b/pages/destinos.html
@@ -75,7 +75,7 @@
                 <li><img src="../assets/pin.png" alt="" width="24">Songdo Skywalk</li>
                 <li><img src="../assets/pin.png" alt="" width="24">Hwangyeongsan Observatory</li>
             </ul>
-            <img  class="imgDestinos" src="../assets/Busan.png" alt="collage de imagenes de Busan">
+            <img  class="imgDestinos" src="../assets/busan.png" alt="collage de imagenes de Busan">
         </article>
         <article>
             <h3>Jeju: naturaleza volcánica y calma isleña</h3>
