--- a/pages/sobre-mi.html
+++ b/pages/sobre-mi.html
@@ -74,13 +74,18 @@
             <li><a href="./consejos.html">Consejos</a></li>
             <li><a href="./sobre-mi.html">Sobre mi</a> </li>
         </ul>
-        <div>
-            <form action="/suscribirse">
-                <label for="emailSuscripcion">Suscribite al Newsletter para recibir mas novedades</label>
-                <input id="emailSuscripcion" type="email" placeholder="Ingrese su email" />
-                <button type="submit">Suscribirse</button>
-            </form>
-        </div>
+        <form class="row g-3 d-flex justify-content-center">
+            <div class="col-auto">
+                <label for="staticEmail2">Suscribite al Newsletter para recibir mas novedades</label>
+            </div>
+            <div class="col-auto">
+                <label for="inputPassword2" class="visually-hidden">Password</label>
+                <input type="password" class="form-control" id="inputPassword2" placeholder="Ingrese su email">
+            </div>
+            <div class="col-auto">
+                <button type="submit" class="btn btn-primary mb-3">Suscribirse</button>
+            </div>
+        </form>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
