Correccion de responsive, nueva imagen header, correccion h1 duplicado

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="container-fluid justify-content-end">
                 <form class="d-flex" role="search">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
-                <button class="btn btn-primary" type="submit">Search</button>
+                <button class="btn" type="submit">Search</button>
                 </form>
             </div>
         </nav>
@@ -89,7 +89,7 @@
                     <div class="card-body">
                         <h4 class="card-title">Jeyuk Bokkeum</h4>
                         <p class="card-text">El Jeyuk Bokkeum es un salteado coreano de cerdo marinado con gochujang, ajo y jengibre, mezclado con vegetales y cocinado a fuego vivo para lograr un sabor bien picante dulce y aromático.</p>
-                        <a href="./pages/que-comer.html" class="btn btn-primary">Mas info</a>
+                        <a href="./pages/que-comer.html" class="btn">Mas info</a>
                     </div>
                     </div>
                 </div>
@@ -99,7 +99,7 @@
                     <div class="card-body">
                         <h4 class="card-title">Kimchi</h4>
                         <p class="card-text">El Kimchi es un plato tradicional coreano hecho de vegetales fermentados, principalmente col china y rábanos, sazonados con una mezcla de chile en polvo, ajo, jengibre y otros condimentos.</p>
-                        <a href="./pages/que-comer.html" class="btn btn-primary">Mas info</a>
+                        <a href="./pages/que-comer.html" class="btn">Mas info</a>
                     </div>
                     </div>
                 </div>
@@ -109,7 +109,7 @@
                     <div class="card-body">
                         <h4 class="card-title">Bibimbap</h4>
                         <p class="card-text">El Bibimbap es un plato coreano servido en un bol con arroz, vegetales variados, carne o tofu y un huevo, mezclado con gochujang para lograr un sabor equilibrado, colorido y delicioso.</p>
-                        <a href="./pages/que-comer.html" class="btn btn-primary">Mas info</a>
+                        <a href="./pages/que-comer.html" class="btn">Mas info</a>
                     </div>
                     </div>
                 </div>
@@ -119,7 +119,7 @@
                     <div class="card-body">
                         <h4 class="card-title">Japchae</h4>
                         <p class="card-text">El Japchae es un plato coreano hecho con fideos de batata salteados con vegetales, carne y salsa de soja y sésamo, logrando una textura suave y un sabor dulce, armonioso y muy fragante.</p>
-                        <a href="./pages/que-comer.html" class="btn btn-primary">Mas info</a>
+                        <a href="./pages/que-comer.html" class="btn">Mas info</a>
                     </div>
                     </div>
                 </div>
@@ -127,7 +127,7 @@
         </section>
     </main>
     <footer>
-        <h1>Unboxing Korea</h1>
+        <h2 class="h2footer">Unboxing Korea</h2>
         <ul>
             <li><a href="#">Inicio</a></li>
             <li><a href="./pages/destinos.html">Destinos</a></li>
@@ -144,7 +144,7 @@
                 <input type="password" class="form-control" id="inputPassword2" placeholder="Ingrese su email">
             </div>
             <div class="col-auto">
-                <button type="submit" class="btn btn-primary mb-3">Suscribirse</button>
+                <button type="submit" class="btn mb-3">Suscribirse</button>
             </div>
         </form>
     </footer>    
