--- a/pages/consejos.html
+++ b/pages/consejos.html
@@ -95,7 +95,7 @@
         </article>
     </main>
     <footer>
-        <h1>Unboxing Korea</h1>
+        <h2 class="h2footer">Unboxing Korea</h2>
         <ul>
             <li><a href="../index.html">Inicio</a></li>
             <li><a href="./destinos.html">Destinos</a></li>
@@ -112,7 +112,7 @@
                 <input type="password" class="form-control" id="inputPassword2" placeholder="Ingrese su email">
             </div>
             <div class="col-auto">
-                <button type="submit" class="btn btn-primary mb-3">Suscribirse</button>
+                <button type="submit" class="btn mb-3">Suscribirse</button>
             </div>
         </form>
     </footer>
