Agregamos flip cards

--- a/index.html
+++ b/index.html
@@ -54,30 +54,45 @@
         <section class="destinos">
             <h3 class="h3Index">Destinos</h3>
             <div class="gridDestinos">
-                <div class="destino">
-                    <a href="./pages/destinos.html">
-                        <img src="./assets/Viaje_a_Corea_del_Sur_Seul_Busan_y_Gyeongju_en_9_dias_1_7_VoP0DOc-thumbnail_webp-1920x960.webp" alt="Foto panoramica de Seoul con vista a la torre Namsan">
-                    </a>
-                    <h4>Seoul</h4>
-                </div>
-                <div class="destino">
-                    <a href="./pages/destinos.html">
-                        <img src="./assets/skycapsule.png" alt="Foto panoramica de Buscan con vista al mar desde Blue Line Park">
-                    </a>
-                    <h4>Busan</h4>
-                </div>
-                <div class="destino">
-                    <a href="./pages/destinos.html">
-                        <img src="./assets/b130110010-banner-size.jpg" alt="Foto panoramica del mar de Jeju con acantilados">
-                    </a>
-                    <h4>Jeju</h4>
-                </div>
-                <div class="destino">
-                    <a href="./pages/destinos.html">
-                        <img src="./assets/Donggung_Palace_Gyeongju_South_Korea.jpg" alt="Foto del palacio Donggung en Gyeongju de noche">
-                    </a>
-                    <h4>Gyeongju</h4>
-                </div>
+                <!-- SEOUL -->
+                <a class="flip" href="./pages/destinos.html">
+                    <div class="front" style="background-image: url('./assets/Viaje_a_Corea_del_Sur_Seul_Busan_y_Gyeongju_en_9_dias_1_7_VoP0DOc-thumbnail_webp-1920x960.webp');">
+                        <h4 class="flipTitle">Seoul</h4>
+                    </div>
+                    <div class="back">
+                        <p>Tradición y modernidad en armonía</p>
+                    </div>
+                </a>
+
+                <!-- BUSAN -->
+                <a class="flip" href="./pages/destinos.html">
+                    <div class="front" style="background-image: url('./assets/skycapsule.png');">
+                        <h4 class="flipTitle">Busan</h4>
+                    </div>
+                    <div class="back">
+                        <p>Mar, montañas y tradición costera</p>
+                    </div>
+                </a>
+
+                <!-- JEJU -->
+                <a class="flip" href="./pages/destinos.html">
+                    <div class="front" style="background-image: url('./assets/b130110010-banner-size.jpg');">
+                        <h4 class="flipTitle">Jeju</h4>
+                    </div>
+                    <div class="back">
+                        <p>Naturaleza volcánica y calma isleña</p>
+                    </div>
+                </a>
+
+                <!-- GYEONGJU -->
+                <a class="flip" href="./pages/destinos.html">
+                    <div class="front" style="background-image: url('./assets/Donggung_Palace_Gyeongju_South_Korea.jpg');">
+                        <h4 class="flipTitle">Gyeongju</h4>
+                    </div>
+                    <div class="back">
+                        <p>La capital histórica de Corea</p>
+                    </div>
+                </a>
             </div>
         </section>
         <section>
