Correccion de alt

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <div class="row row-cols-1 row-cols-lg-4 row-cols-md-2 row-cols-sm-1">
                 <div class="col">
                     <div class="card h-100">
-                    <img src="./assets/Spicy-Korean-Pork-Stir-Fry.jpg" class="card-img-top" alt="...">
+                    <img src="./assets/Spicy-Korean-Pork-Stir-Fry.jpg" class="card-img-top" alt="Imagen de un plato de Jeyuk Bokkeum">
                     <div class="card-body">
                         <h4 class="card-title">Jeyuk Bokkeum</h4>
                         <p class="card-text">El Jeyuk Bokkeum es un salteado coreano de cerdo marinado con gochujang, ajo y jengibre, mezclado con vegetales y cocinado a fuego vivo para lograr un sabor bien picante dulce y aromático.</p>
@@ -110,7 +110,7 @@
                 </div>
                 <div class="col">
                     <div class="card h-100">
-                    <img src="./assets/kimchi.jpeg" class="card-img-top" alt="...">
+                    <img src="./assets/kimchi.jpeg" class="card-img-top" alt="Imagen de un plato de Kimchi">
                     <div class="card-body">
                         <h4 class="card-title">Kimchi</h4>
                         <p class="card-text">El Kimchi es un plato tradicional coreano hecho de vegetales fermentados, principalmente col china y rábanos, sazonados con una mezcla de chile en polvo, ajo, jengibre y otros condimentos.</p>
@@ -120,7 +120,7 @@
                 </div>
                 <div class="col">
                     <div class="card h-100">
-                    <img src="./assets/bibimbap-3WIPGELALFASPN3S3TCESOA6GE.avif" class="card-img-top" alt="...">
+                    <img src="./assets/bibimbap-3WIPGELALFASPN3S3TCESOA6GE.avif" class="card-img-top" alt="Imagen de un plato de Bibimbap">
                     <div class="card-body">
                         <h4 class="card-title">Bibimbap</h4>
                         <p class="card-text">El Bibimbap es un plato coreano servido en un bol con arroz, vegetales variados, carne o tofu y un huevo, mezclado con gochujang para lograr un sabor equilibrado, colorido y delicioso.</p>
@@ -130,7 +130,7 @@
                 </div>
                 <div class="col">
                     <div class="card h-100">
-                    <img src="./assets/japchae.jpg" class="card-img-top" alt="...">
+                    <img src="./assets/japchae.jpg" class="card-img-top" alt="Imagen de un plato de Japchae">
                     <div class="card-body">
                         <h4 class="card-title">Japchae</h4>
                         <p class="card-text">El Japchae es un plato coreano hecho con fideos de batata salteados con vegetales, carne y salsa de soja y sésamo, logrando una textura suave y un sabor dulce, armonioso y muy fragante.</p>
