--- a/pages/destinos.html
+++ b/pages/destinos.html
@@ -54,12 +54,12 @@
             <img  class="imgDestinos" src="../assets/Viaje_a_Corea_del_Sur_Seul_Busan_y_Gyeongju_en_9_dias_1_7_VoP0DOc-thumbnail_webp-1920x960.webp" alt="Foto panoramica de Seoul con vista a la torre Namsan">
             <p>La vibrante capital de Corea del Sur y una de las ciudades más dinámicas del mundo. Reconocida por combinar tecnología avanzada con profundas raíces culturales, la ciudad ofrece un contraste fascinante entre rascacielos futuristas, palacios reales, barrios tradicionales y naturaleza urbana. Cada rincón de Seoul revela una faceta distinta de su historia milenaria y su espíritu innovador.es una metrópoli que combina lo antiguo y lo moderno. Desde el Palacio Gyeongbokgung hasta el bullicioso mercado de Myeongdong, hay algo para todos.</p>
             <ul class="itemsDestinos">
-                <li><img src="../assets/pin.png" alt="" width="20"> Gyeongbokgung Palace</li>
-                <li><img src="../assets/pin.png" alt="" width="20"> Namsan Seoul Tower</li>
-                <li><img src="../assets/pin.png" alt="" width="20"> Dongdaemun Design Plaza</li>
-                <li><img src="../assets/pin.png" alt="" width="20"> Bukchon Hanok Village</li>
-                <li><img src="../assets/pin.png" alt="" width="20"> Hongdae District</li>
-                <li><img src="../assets/pin.png" alt="" width="20"> Cheonggyecheon Stream</li>
+                <li><img src="../assets/pin.png" alt="Icono pin" width="20"> Gyeongbokgung Palace</li>
+                <li><img src="../assets/pin.png" alt="Icono pin" width="20"> Namsan Seoul Tower</li>
+                <li><img src="../assets/pin.png" alt="Icono pin" width="20"> Dongdaemun Design Plaza</li>
+                <li><img src="../assets/pin.png" alt="Icono pin" width="20"> Bukchon Hanok Village</li>
+                <li><img src="../assets/pin.png" alt="Icono pin" width="20"> Hongdae District</li>
+                <li><img src="../assets/pin.png" alt="Icono pin" width="20"> Cheonggyecheon Stream</li>
             </ul>
             <img class="imgDestinos" src="../assets/Seoul.png" alt="collage de imagenes de Seoul">
         </article>
@@ -68,12 +68,12 @@
             <img  class="imgDestinos" src="../assets/skycapsule.png" alt="Foto panoramica de Buscan con vista al mar desde Blue Line Park" class="imgDestinos">
             <p>Es la segunda ciudad más grande de Corea del Sur y un destino que combina playas amplias, templos históricos y montañas que abrazan el mar. Con un ambiente más relajado que Seoul, esta ciudad portuaria se destaca por su espíritu costero, su gastronomía —especialmente los platos con mariscos frescos— y su encanto natural. Busan es el lugar ideal para disfrutar de la tranquilidad del océano sin dejar de vivir la cultura coreana en su máxima expresión.</p>
             <ul class="itemsDestinos">
-			    <li><img src="../assets/pin.png" alt="" width="24">Gamcheon Culture Village</li>
-                <li><img src="../assets/pin.png" alt="" width="24">Jagalchi Fish Market</li>
-                <li><img src="../assets/pin.png" alt="" width="24">Beomeosa Temple</li>
-                <li><img src="../assets/pin.png" alt="" width="24">Gwangalli Beach</li>
-                <li><img src="../assets/pin.png" alt="" width="24">Songdo Skywalk</li>
-                <li><img src="../assets/pin.png" alt="" width="24">Hwangyeongsan Observatory</li>
+                <li><img src="../assets/pin.png" alt="Icono pin" width="24">Gamcheon Culture Village</li>
+                <li><img src="../assets/pin.png" alt="Icono pin" width="24">Jagalchi Fish Market</li>
+                <li><img src="../assets/pin.png" alt="Icono pin" width="24">Beomeosa Temple</li>
+                <li><img src="../assets/pin.png" alt="Icono pin" width="24">Gwangalli Beach</li>
+                <li><img src="../assets/pin.png" alt="Icono pin" width="24">Songdo Skywalk</li>
+                <li><img src="../assets/pin.png" alt="Icono pin" width="24">Hwangyeongsan Observatory</li>
             </ul>
             <img  class="imgDestinos" src="../assets/busan.png" alt="collage de imagenes de Busan">
         </article>
@@ -82,12 +82,12 @@
             <img class="imgDestinos" src="../assets/jejuisland.png" alt="Foto del mar de jeju y estatua de piedra volcanica" class="imgDestinos">
             <p>una isla paradisíaca al sur de Corea del Sur, conocida por sus paisajes volcánicos, playas de aguas cristalinas y un ambiente tranquilo ideal para desconectar. Declarada Patrimonio Natural de la Humanidad, combina cráteres, cuevas de lava, cascadas y laderas verdes que caen al mar. Es un destino perfecto para disfrutar de la naturaleza, hacer trekking y descubrir la cultura isleña, marcada por tradiciones únicas como las haenyeo, las famosas buceadoras que pescan a pulmón.</p>
             <ul class="itemsDestinos">
-                <li><img src="../assets/pin.png" alt="" width="24">Seongsan Ilchulbong (Sunrise Peak)</li>
-                <li><img src="../assets/pin.png" alt="" width="24">Manjanggul Cave</li>
-                <li><img src="../assets/pin.png" alt="" width="24">Museo de las Haenyeo</li>
-                <li><img src="../assets/pin.png" alt="" width="24">Hallasan National Park</li>
-                <li><img src="../assets/pin.png" alt="" width="24">Jusangjeolli Cliffs</li>
-                <li><img src="../assets/pin.png" alt="" width="24">Cheonjiyeon Waterfall</li>
+                <li><img src="../assets/pin.png" alt="Icono pin" width="24">Seongsan Ilchulbong (Sunrise Peak)</li>
+                <li><img src="../assets/pin.png" alt="Icono pin" width="24">Manjanggul Cave</li>
+                <li><img src="../assets/pin.png" alt="Icono pin" width="24">Museo de las Haenyeo</li>
+                <li><img src="../assets/pin.png" alt="Icono pin" width="24">Hallasan National Park</li>
+                <li><img src="../assets/pin.png" alt="Icono pin" width="24">Jusangjeolli Cliffs</li>
+                <li><img src="../assets/pin.png" alt="Icono pin" width="24">Cheonjiyeon Waterfall</li>
             </ul>
             <img  class="imgDestinos" src="../assets/jejucollage.png" alt="Collage de imagenes de Jeju">
         </article>
@@ -96,12 +96,12 @@
             <img class="imgDestinos" src="../assets/Gyeongju.png" alt="Foto del palacio Donggung en Gyeongju de noche" class="imgDestinos">
             <p>Conocida como "el museo sin paredes", Gyeongju fue la capital del antiguo Reino de Silla y alberga una impresionante cantidad de sitios históricos y culturales. La ciudad está salpicada de tumbas reales, templos budistas, palacios y artefactos que narran la rica historia de Corea. Pasear por Gyeongju es como viajar en el tiempo, ofreciendo una experiencia única para los amantes de la historia y la cultura que desean explorar el legado de una de las civilizaciones más antiguas de Asia.</p>
             <ul class="itemsDestinos">
-                <li><img src="../assets/pin.png" alt="" width="24">Parque de Tumuli de Daereungwon</li>
-                <li><img src="../assets/pin.png" alt="" width="24">Templo Bulguksa</li>
-                <li><img src="../assets/pin.png" alt="" width="24">Observatorio Cheomseongdae</li>
-                <li><img src="../assets/pin.png" alt="" width="24">Palacio Donggung y Estanque Wolji</li>
-                <li><img src="../assets/pin.png" alt="" width="24">Hwangnidangil Street</li>
-                <li><img src="../assets/pin.png" alt="" width="24">Gruta Seokguram</li>
+                <li><img src="../assets/pin.png" alt="Icono pin" width="24">Parque de Tumuli de Daereungwon</li>
+                <li><img src="../assets/pin.png" alt="Icono pin" width="24">Templo Bulguksa</li>
+                <li><img src="../assets/pin.png" alt="Icono pin" width="24">Observatorio Cheomseongdae</li>
+                <li><img src="../assets/pin.png" alt="Icono pin" width="24">Palacio Donggung y Estanque Wolji</li>
+                <li><img src="../assets/pin.png" alt="Icono pin" width="24">Hwangnidangil Street</li>
+                <li><img src="../assets/pin.png" alt="Icono pin" width="24">Gruta Seokguram</li>
             </ul>
             <img class="imgDestinos" src="../assets/gyeongjucollage.png" alt="Collage de imagenes de Gyeongju">
         </article>
