--- a/pages/que-comer.html
+++ b/pages/que-comer.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Unboxing Korea</title>
+    <meta name="description" content="Descubrí la gastronomía coreana a través de platos tradicionales. Sabores intensos, recetas típicas y cultura culinaria de Corea del Sur." />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
 </head>
